--- a/docs/Recipes.mdx
+++ b/docs/Recipes.mdx
@@ -8,7 +8,7 @@ import LazyImage from './components/LazyImage'
 
 # Recipes
 
-The IntersectionObserver itself is just a simple tool.
+The IntersectionObserver itself is just a simple but powerful tool. Here's a few ideas for how you can use it.
 
 ## Lazy image load
 
@@ -33,35 +33,6 @@ build it according to your needs.
   load their `src`, if even you set `display: none;`.
 
 ```jsx
-import React, { useRef } from 'react'
-import { useInView } from 'react-intersection-observer'
-
-const LazyImage = ({ width, height, src, ...rest }) => {
-  const ref = useRef(null)
-  const inView = useInView(ref, {
-    triggerOnce: true,
-    threshold: 1,
-  })
-
-  return (
-    <div
-      ref={ref}
-      style={{
-        position: 'relative',
-        paddingBottom: `${(height / width) * 100}%`,
-        background: '#2a4b7a',
-      }}
-    >
-      {inView ? (
-        <img
-          {...rest}
-          src={src}
-          style={{ position: 'absolute', width: '100%', height: '100%' }}
-        />
-      ) : null}
-    </div>
-  )
-}
 
 export default LazyImage
 ```
