--- a/src/stories/intro.story.mdx
+++ b/src/stories/intro.story.mdx
@@ -13,8 +13,8 @@ Contains both a [Hooks](#useinview), [render props](#render-props) and
 
 ## Storybook demo
 
-This Storybook is a collection of examples. The examples are using during
-development as a way to validate that various features are working as intended.
+This Storybook is a collection of examples. The examples are used during
+development as a way to validate that all features are working as intended.
 
 ## Usage
 
