feat: switch to vitest and storybook vite (#549)

--- a/src/stories/intro.story.mdx
+++ b/src/stories/intro.story.mdx
@@ -1,4 +1,4 @@
-import { Meta, Canvas, Story } from '@storybook/addon-docs/blocks';
+import { Meta, Canvas, Story } from '@storybook/addon-docs';
 
 <Meta title="Introduction" />
 
