refactor: correct name of readme import

--- a/storybook/stories/Intro.mdx
+++ b/storybook/stories/Intro.mdx
@@ -1,4 +1,4 @@
 import { Markdown } from '@storybook/addon-docs';
-import Readme from '../README.md?raw';
+import Readme from '../readme.md?raw';
 
 <Markdown>{Readme}</Markdown>
